; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/syscons/snake/extr_snake_saver.c_snake_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/syscons/snake/extr_snake_saver.c_snake_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSGBUF_LEN = common dso_local global i32 0, align 4
@M_DEVBUF = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@message = common dso_local global i8* null, align 8
@messagep = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @snake_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snake_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @MSGBUF_LEN, align 4
  %4 = load i32, i32* @M_DEVBUF, align 4
  %5 = load i32, i32* @M_WAITOK, align 4
  %6 = call i8* @malloc(i32 %3, i32 %4, i32 %5)
  store i8* %6, i8** @message, align 8
  %7 = load i32, i32* @MSGBUF_LEN, align 4
  %8 = sext i32 %7 to i64
  %9 = mul i64 %8, 1
  %10 = trunc i64 %9 to i32
  %11 = load i32, i32* @M_DEVBUF, align 4
  %12 = load i32, i32* @M_WAITOK, align 4
  %13 = call i8* @malloc(i32 %10, i32 %11, i32 %12)
  store i8* %13, i8** @messagep, align 8
  %14 = call i32 (...) @update_msg()
  ret i32 0
}

declare dso_local i8* @malloc(i32, i32, i32) #1

declare dso_local i32 @update_msg(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
